<resources>
    <string name="app_name">Homework3-Lecture5</string>
    <string name="profile_info">Profile Info</string>
    <string name="first_name">First Name:</string>
    <string name="email">Email:</string>
    <string name="phone_number">Phone Number:</string>
    <string name="username">Username:</string>
    <string name="last_name">Last Name:</string>
    <string name="age">Age:</string>
    <string name="save">Save</string>
    <string name="clear">Clear</string>
    <string name="your_email">Your Email</string>
    <string name="your_phone_number">Your Phone Number</string>
    <string name="your_username">Your Username</string>
    <string name="your_name">Your Name</string>
    <string name="your_last_name">Your Last Name</string>
    <string name="your_age">Your Age</string>
    <string name="again">Again</string>
</resources>